# demo

./: Dockerfile  README.md  pyproject.toml
demo/: app.py
