[tool.poetry]
name = "traceloop-demo"
version = "0.1.0"
description = "A full demo of OpenLLMetry with LlamaIndex on Traceloop docs"
authors = ["Nir Gazit <nir@traceloop.com>", "Gal Kleinman <gal@traceloop.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4"
llama-index = "^0.10.52"
streamlit = "^1.36.0"
traceloop-sdk = "^0.24.0"
llama-index-readers-github = "^0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
